@@ -138,18 +138,30 @@ class watchlistPlayer(xbmc.Player):
                 break
             xbmc.sleep(250)
 
-        # for i in range(0, 480):
-        #     if self.AVStarted:
-        #         break
-
         control.closeAllDialogs()
 
-        audio_lang = self.getAvailableAudioStreams()
-        if len(audio_lang) > 1:
-            preferred_audio = control.getSetting('General.audio').lower()
-            if preferred_audio in audio_lang:
-                audio_int = audio_lang.index(preferred_audio)
-                self.setAudioStream(audio_int)
+        try:
+            audio_lang = self.getAvailableAudioStreams()
+            if len(audio_lang) > 1:
+                preferred_audio = control.getSetting('General.audio')
+                if preferred_audio == 'Japanese':
+                    try:
+                        audio_int = audio_lang.index('jpn')
+                        self.setAudioStream(audio_int)
+                    except:
+                        pass
+                    try:
+                        self.setSubtitleStream(1)
+                    except:
+                        pass
+                else:
+                    try:
+                        audio_int = audio_lang.index(preferred_audio.lower())
+                        self.setAudioStream(audio_int)
+                    except:
+                        pass
+        except:
+            pass
 
         if self.media_type == 'movie':
             return self.onWatchedPercent()
@@ -165,7 +177,7 @@ class watchlistPlayer(xbmc.Player):
                 else:
                     xbmc.sleep(250)
 
-        _ = self.onWatchedPercent()
+        scrobble = self.onWatchedPercent()
 
         if control.getSetting('smartplay.playingnextdialog') == 'true':
             endpoint = int(control.getSetting('playingnext.time'))
@@ -175,13 +187,11 @@ class watchlistPlayer(xbmc.Player):
         if endpoint:
             while self.isPlaying():
                 if int(self.getTotalTime()) - int(self.getTime()) <= endpoint:
-                    # xbmc.executebuiltin('RunPlugin("plugin://plugin.video.otaku/run_player_dialogs")')
-                    PlayerDialogs().display_dialog()
+                    xbmc.executebuiltin('RunPlugin("plugin://plugin.video.otaku/run_player_dialogs")')
                     break
                 else:
                     xbmc.sleep(1000)
-
-
+    
 class PlayerDialogs(xbmc.Player):
 
     def __init__(self):
