@@ -1,3 +1,6 @@
+Changelog 0.3.16 [20230207]:
+- Fixed Preferred Audio Stream for torrents.
+
 Changelog 0.3.15 [20230206]:
 - Brought back "Separate Subs and Dubs" 
 
